﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.11...]
### 2018-08-26
	Added: Total network device errors shown after deltas.
### 2018-07-20
	Fixed: An error retrieving process information when the process has already exited in foreground hang detector.
		Checked for other potential similar instances.
### 2018-07-17
	Fixed: An error retrieving process information when the process has already exited.
### 2018-07-08
	Added: Audio session management. `Watchlist.ini´ now has secret options `Volume´ and `Volume strategy´.
		Volume is floating point number from 0 to 1.
		Volume strategy ranges from 0 to 3. Meanings as follows: 0 = Ignore (default), 1 = Decrease, 2 = Increase, 3 = Either.
	Fixed: NullReferenceException that was introduced on same day update.

### 2018-07-03
	Fixed: Unhandled process exit is now handled.
### 2018-07-02
	Changed: Some debug output for monitor power states.
### 2018-06-30
	Fixed: Monitor sleep during lock is not giving up.

### 2018-06-29 Version 0.11
	Added: Option to minimize, reduce priority&affinity, and to kill hung foreground apps, based on time spent hung.

## [0.10...]
### 2018-06-28
	Fixed: Rare crash if OS task scheduler is not responding. Now wait longer, kill any lingering started processes, and be smarter.
### 2018-06-22
	Fixed: Monitor sleep during session lock does not work sometimes.
### 2018-06-15
	Fixed: Network status changes were not being informed as they should've been.
	Changed: Removed some pointless network device list updates and only marked the need for refreshing.
	Changed: Made some code paths exit early if they detect process they're dealing with having exited.
### 2018-06-08
	Fixed: Rare(?) crash if session lock monitor power down is enabled.
### 2018-06-03
	Fixed: Network tab does not update address when IP changes while the UI is open.