@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.11...]
+### 2018-08-28
+	Fixed: If no default microphone is set up, microphone manager won't crash the entire app.
 ### 2018-08-26
 	Added: Total network device errors shown after deltas.
 ### 2018-07-20
